results/baseline/humaneval/openai/test_scripts/HumanEval-41_6.out
Error running code: unterminated string literal (detected at line 16) (<string>, line 16)
